<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tab2_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".MainActivity">


                <TextView
                    android:id="@+id/symbolHead"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:background="#0b0e0c"
                    android:padding="10dp"
                    android:text="Symbol"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/currentHead"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:background="#0b0e0c"
                    android:padding="10dp"
                    android:text="Current"
                    android:textAlignment="textEnd"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/last5Head"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:background="#0b0e0c"
                    android:padding="10dp"
                    android:text="Last 5"
                    android:textAlignment="textEnd"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/last10Head"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:background="#0b0e0c"
                    android:padding="10dp"
                    android:text="Last 10"
                    android:textAlignment="textEnd"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/percentage"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="#0b0e0c"
                    android:padding="10dp"
                    android:text="Avg % change"
                    android:textAlignment="textEnd"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/buy"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="#0b0e0c"
                    android:padding="10dp"
                    android:text="Momentum"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/DailyPercentageHeader"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="#0b0e0c"
                    android:padding="10dp"
                    android:text="Day % change"
                    android:textAlignment="textEnd"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />


            </LinearLayout>


            <ListView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <!--</LinearLayout>-->

        </LinearLayout>
        <!--END OF CHILD LAYOUT-->

    </HorizontalScrollView>


</LinearLayout>
