...
    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_weight="1" />

    <Switch
        android:id="@+id/popup_track_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:splitTrack="false"
        android:text="@string/track" />
...
